--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,18 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: myweb
-  name: myweb
+    app: mywebdeploy
+  name: mywebdeploy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: myweb
-  strategy: {}
+      app: mywebdeploy
   template:
     metadata:
       labels:
-        app: myweb
+        app: mywebdeploy
     spec:
       containers:
       - image: nginx
