--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: mywebdeploy
-  name: mywebdeploy
+    app: myweb
+  name: myweb
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mywebdeploy
+      app: myweb
   template:
     metadata:
       labels:
-        app: mywebdeploy
+        app: myweb
     spec:
       containers:
       - image: nginx
